Added preview page

--- a/popup.html
+++ b/popup.html
@@ -4,18 +4,13 @@
   <meta charset="utf-8" />
   <title>LinkedIn Extractor</title>
   <style>
-    body   { font-family: system-ui, sans-serif; margin: 1rem; }
-    button { margin: .25rem 0; padding: .5rem 1rem; cursor: pointer; }
-    pre    { white-space: pre-wrap; word-break: break-word; }
+    body{font-family:system-ui,Arial,sans-serif;margin:1rem;width:260px}
+    button{display:block;width:100%;margin:.5rem 0;padding:.5rem 1rem;cursor:pointer}
   </style>
 </head>
 <body>
-  <button id="extract">Extract Profile Info (JSON)</button>
-
+  <button id="extract">Extract Profile Info</button>
   <button id="downloadPdf">Download Profile as PDF</button>
-
-  <pre id="output"></pre>
   <script src="popup.js"></script>
 </body>
 </html>
-
