--- a/preview.html
+++ b/preview.html
@@ -1,31 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>LinkedIn Profile Preview</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body{font-family:system-ui,Arial,sans-serif;margin:1rem;line-height:1.4}
-    img{border-radius:50%;}
-    table{border-collapse:collapse;width:100%;margin-bottom:1rem}
-    th,td{border:1px solid #ccc;padding:.4rem;text-align:left;font-size:.9rem}
-    th{background:#f2f2f2}
-    h2{margin-top:1.5rem}
-    button{padding:.5rem 1rem;margin-top:1rem;cursor:pointer}
+    :root{
+      --bg:#f4f6f9;
+      --card:#fff;
+      --border:#e5e7eb;
+      --primary:#0a66c2;
+      --text:#2d3748;
+      --muted:#6b7280;
+      --radius:12px;
+      --shadow:0 4px 10px rgba(0,0,0,.06);
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family:"Inter",system-ui,sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      padding:2rem;
+    }
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:2rem;
+      max-width:960px;
+      margin:auto;
+    }
+    h1{font-size:1.75rem;font-weight:700;margin-bottom:.5rem}
+    h2{font-size:1.25rem;font-weight:600;margin:1.75rem 0 .75rem}
+    img#photo{border-radius:50%;width:140px;height:140px;object-fit:cover;box-shadow:0 2px 6px rgba(0,0,0,.15);margin-bottom:1rem}
+    table{width:100%;border-collapse:collapse;font-size:.9rem}
+    th,td{border:1px solid var(--border);padding:.6rem .5rem;text-align:left}
+    th{background:#eef2f7;font-weight:600}
+    ul#skills{list-style:none;display:flex;flex-wrap:wrap;gap:.5rem;margin-top:.5rem}
+    ul#skills li{background:var(--primary);color:#fff;padding:.3rem .6rem;border-radius:9999px;font-size:.8rem}
+    button#saveLocal{
+      background:var(--primary);
+      color:#fff;
+      border:none;
+      padding:.7rem 1.2rem;
+      border-radius:var(--radius);
+      font-weight:600;
+      cursor:pointer;
+      margin-top:2rem;
+      transition:background .2s;
+    }
+    button#saveLocal:hover{background:#004182}
+    .center{text-align:center}
+    .fade{animation:fadeIn .4s ease-in-out}
+    @keyframes fadeIn{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:none}}
   </style>
 </head>
 <body>
-  <h1 id="name"></h1>
-  <img id="photo" width="120" alt="profile photo"/>
-  <h2>Experience</h2>
-  <table id="exp"></table>
+  <div class="card fade">
+    <div class="center">
+      <img id="photo" alt="profile photo" />
+      <h1 id="name"></h1>
+    </div>
 
-  <h2>Education</h2>
-  <table id="edu"></table>
+    <h2>Experience</h2>
+    <table id="exp"></table>
 
-  <h2>Skills</h2>
-  <ul id="skills"></ul>
+    <h2>Education</h2>
+    <table id="edu"></table>
 
-  <button id="downloadJson">Download JSON</button>
+    <h2>Skills</h2>
+    <ul id="skills"></ul>
+
+    <div class="center">
+      <button id="saveLocal">Save to Local Storage</button>
+    </div>
+  </div>
   <script src="preview.js"></script>
 </body>
 </html>
